@@ -1,3 +1,8 @@
+2016-02-13  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * doc/gputils.lyx, gpasm/gpasm.c, gpasm/gperror.c, gpasm/gperror.h,
+    gpasm/processor.c, gpasm/pparse.y:
+    Feature requests: "#64 Better error handling" 6.
+
 2016-02-09  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gpasm/processor.c:
     Feature requests: "#64 Better error handling" 5.
